
        python -m pip install jupyter_contrib_nbextensions RISE
        jupyter contrib nbextension install --user

    * With conda::

        conda install -c conda-forge jupyter_contrib_nbextensions rise
        jupyter contrib nbextension install --user

    * https://rise.readthedocs.io/en/stable/installation.html
    * https://github.com/ipython-contrib/jupyter_contrib_nbextensions
    
0.3.1:
  - Added `mmf_setup cocalc` initialization for CoCalc.com projects
    (changed from `mmf_setup smc`).
  - Add message to `nbinit()` call indicating that HGROOT has been added
    to `sys.path`.
  - Resolves issue #22 with git username classes on cocalc.
  - 

0.3.0:
  - Support python 3 - drop support for python 2.
  - Conda installable from mforbes channel on anaconda cloud.
  - Add missing default.tex theme so that nbinit() brings in math
    definitions even if no theme is specified.
  - Fixed KeyError: 'asyncio' error on failed IPython import.

0.1.13:
  - Incomplete version... everything here is rolled into 0.3.0

0.1.12:
  - Made `mmf_initial_setup` python 3 compliant.
  - Added logging to nbinit() and made some slight tweaks to HGROOT.
  - Added \D, \sn, \cn, \dn commands for mathjax.
  
0.1.11:
  - Resolve issue #20:

    - `mmf_setup.set_path.set_path_from_file` allows for configuration of path
      in `setup.cfg` file.
    - Fix python 3 bug: TypeError: Can't mix strings and bytes in path components
	
0.1.10:
  - Added better backwards compatibility for previous changes.
  - Simplified nbinit theme management and use 'default' theme as default.

    - New themes only need to overwrite what they need.
    - Don't change fonts as default since this does not work well on CoCalc (the
      code cells change size on clicking which is a pain.)

0.1.9:
  - Resolve issues:

    - #17: store mmf_setup.HGROOT
    - #18: safer exception handling with nbclean commands so data is not lost
    - #19: nbclean works with new mercurial API
      