@@ -7,24 +7,37 @@
 #      https://alum.mit.edu/www/mforbes/public/notes/cocalc-workflow/
 
 function usage() {
-    echo "usage: source mmf_setup [-v]  OR  . mmf_setup [-v]  OR  mmf_setup cocalc"
+    echo "usage: mmf_setup cocalc [options] OR mmf_setup -v [options] OR source mmf_setup [options]"
     echo
-    echo "  -v : show variables that are set"
+    echo "The first invocation will setup cocalc.com projects:"
     echo
-    echo "For initial setup on cocalc.com projects:"
+    echo "   mmf_setup cocalc [options]"
     echo
-    echo "   mmf_setup cocalc"
+    echo "Additional options are passed to mmf_initial_setup.  For more info run"
     echo
+    echo "   mmf_initial_setup -h"
+    echo
+    echo "The second invocation will show which environmental variables will be set:"
+    echo
+    echo "   mmf_setup -v [options]"
+    echo
+    echo "The third invocation will actually set this in your shell by running mmf_setup_bash.py:"
+    echo
+    echo "   source mmf_setup [options]   OR . mmf_setup [options]"
+    echo
+    echo "Valid options for mmf_setup_bash.py are:"
+    echo "$(mmf_setup_bash.py -h)"    
 }
 
 BIN_DIR="$(dirname $BASH_SOURCE{0})"
 
-for i in "$@"
-do
-    case $i in
+if [[ -n $1 ]]; then
+    case $1 in
         -v)
+            shift # move to the next argument
             echo "mmf_setup environment:"
-            echo "$(mmf_setup_bash.py)"
+            echo "$(mmf_setup_bash.py $*)"
+            exit 0
             ;;
         smc|cocalc)
             hg="$(type -p hg)"
@@ -50,20 +63,18 @@ do
             python3 -m pip install --upgrade --user jupytext
             exit 0
             ;;
-        *)
+        -h)
             usage
             exit 1
             ;;
     esac
-    shift # move to the next argument
-done
-
-# Ensure that this script is sourced, not executed
-if [[ -n $BASH_VERSION ]] && [[ "$(basename "$0" 2> /dev/null)" == "mmf_setup" ]];
-then
-    >&2 echo "Error: mmf_setup must be sourced. Run 'source mmf_setup' or '. mmf_setup' instead of 'mmf_setup'"
-    usage
-    exit 1
 fi
-
-eval "$(mmf_setup_bash.py)"
+if [[ -n $BASH_VERSION ]] && [[ "$(basename "$0" 2> /dev/null)" == "mmf_setup" ]]; then
+    # Ensure that this script is sourced, not executed
+    >&2 echo "Error: mmf_setup must be sourced. Run 'source mmf_setup' or '. mmf_setup' instead of 'mmf_setup'"
+    >&2 echo
+    usage
+else
+    # Okay.  Actually source the environment
+    eval "$(mmf_setup_bash.py $*)"
+fi
