@@ -5,7 +5,8 @@ __all__ = ["nbinit", "MMF_SETUP", "DATA", "HGTHEMES", "NBTHEMES", "HGRC", "HGROO
 
 MMF_SETUP = os.path.abspath(os.path.dirname(__file__))
 DATA = os.path.join(MMF_SETUP, "_data")
-HGRC = os.path.join(DATA, "hgrc")
+HGRC_LGA = os.path.join(DATA, "hgrc.lga")
+HGRC_FULL = os.path.join(DATA, "hgrc.full")
 HGTHEMES = os.path.join(DATA, "hgthemes")
 NBTHEMES = os.path.join(DATA, "nbthemes")
 ROOT = "."
